[package]
name = "zenix-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gachors/zenix-macros"
homepage = "https://github.com/gachors/zenix-macros"
description = "Proc-macro crate for zenix."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
